Fix table alignment

--- a/style.css
+++ b/style.css
@@ -22,3 +22,8 @@ thead {
 * {
     text-align: center;
 }
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+}
